--- a/source/index.html
+++ b/source/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/bootstrap.min.scss">
-  <link rel="stylesheet" href="./styles/style.scss">
-  <title>Document</title>
+  <link rel="preload" href="./fonts/opensans.woff2" as="font">
+    <link rel="preload" href="./fonts/opensansbold.woff2" as="font">
+  <link rel="stylesheet" href="./css/style.min.css">
+  <title>Mishka</title>
 </head>
 <body>
-  <script src="./js/jquery.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
+  <header class="page-header">
+    <nav class="main-nav">
+      <ul class="main-nav__list reset-list">
+        <li class="main-nav__list-item">
+          <a href="#" class="main-nav__list-link">
+            <picture>
+              <source media="(min-width: 1250px)" srcset="./img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="./img/logo-tablet.svg">
+              <img class="main-nav__logo" src="./img/logo-mobile.svg" alt="Логотип ‎Mishka">
+            </picture>
+          </a>
+          <button class="main-nav__button main-nav__button--open button-default" type="button">
+            <span></span>
+          </button>
+        </li>
+        <li class="main-nav__list-item">
+          <a href="#" class="main-nav__list-link">Каталог товаров</a>
+        </li>
+        <li class="main-nav__list-item">
+          <a href="#" class="main-nav__list-link">Вязание на заказ</a>
+        </li>
+        <li class="main-nav__list-item">
+          <a href="#" class="main-nav__list-link">Поиск по сайту</a>
+        </li>
+        <li class="main-nav__list-item">
+          <a href="#" class="main-nav__list-link">Корзина: пока пуста</a>
+        </li>
+        <li class="main-nav__list-item main-nav__list-item--hidden">
+          <a href="#" class="main-nav__list-link">Новые поступления</a>
+        </li>
+        <li class="main-nav__list-item main-nav__list-item--hidden">
+          <a href="#" class="main-nav__list-link">Распродажа</a>
+        </li>
+      </ul>
+      <small class="main-nav__legend">Бесплатная доставка по России</small>
+    </nav>
+  </header>
+
+  <main></main>
+
+  <footer></footer>
+
   <script src="./js/script.js"></script>
 </body>
 </html>
