--- a/source/index.html
+++ b/source/index.html
@@ -10,45 +10,13 @@
   <title>Mishka</title>
 </head>
 <body>
-  <header class="page-header">
-    <nav class="main-nav">
-      <ul class="main-nav__list reset-list">
-        <li class="main-nav__list-item">
-          <a href="#" class="main-nav__list-link">
-            <picture>
-              <source media="(min-width: 1250px)" srcset="./img/logo-desktop.svg">
-              <source media="(min-width: 768px)" srcset="./img/logo-tablet.svg">
-              <img class="main-nav__logo" src="./img/logo-mobile.svg" alt="Логотип ‎Mishka">
-            </picture>
-          </a>
-          <button class="main-nav__button main-nav__button--open button-default" type="button">
-            <span></span>
-          </button>
-        </li>
-        <li class="main-nav__list-item">
-          <a href="#" class="main-nav__list-link">Каталог товаров</a>
-        </li>
-        <li class="main-nav__list-item">
-          <a href="#" class="main-nav__list-link">Вязание на заказ</a>
-        </li>
-        <li class="main-nav__list-item">
-          <a href="#" class="main-nav__list-link">Поиск по сайту</a>
-        </li>
-        <li class="main-nav__list-item">
-          <a href="#" class="main-nav__list-link">Корзина: пока пуста</a>
-        </li>
-        <li class="main-nav__list-item main-nav__list-item--hidden">
-          <a href="#" class="main-nav__list-link">Новые поступления</a>
-        </li>
-        <li class="main-nav__list-item main-nav__list-item--hidden">
-          <a href="#" class="main-nav__list-link">Распродажа</a>
-        </li>
-      </ul>
-      <small class="main-nav__legend">Бесплатная доставка по России</small>
-    </nav>
+  <header class="page-header page-header--index">
+    @@include('./html/main-nav.html')
   </header>
 
-  <main></main>
+  <main>
+    @@include('./html/site-intro.html')
+  </main>
 
   <footer></footer>
 
