--- a/source/html/main-nav.html
+++ b/source/html/main-nav.html
@@ -4,9 +4,9 @@
       <div class="main-nav__logo-wrapper">
         <a href="#" class="main-nav__logo-link">
           <picture>
-            <source media="(min-width: 1250px)" srcset="./img/logo-desktop.svg">
-            <source media="(min-width: 768px)" srcset="./img/logo-tablet.svg">
-            <img class="main-nav__logo-img" src="./img/logo-mobile.svg" alt="Логотип ‎Mishka">
+            <source media="(min-width: 1250px)" srcset="../img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
+            <img class="main-nav__logo-img" src="../img/logo-mobile.svg" alt="Логотип ‎Mishka">
           </picture>
         </a>
         <button class="main-nav__button button-default" type="button">
