--- a/source/index.html
+++ b/source/index.html
@@ -17,6 +17,7 @@
   <main>
     @@include('./html/site-intro.html')
     @@include('./html/top-product.html')
+    @@include('./html/about-us.html')
   </main>
 
   <footer></footer>
