reviews section done

--- a/source/index.html
+++ b/source/index.html
@@ -18,6 +18,7 @@
     @@include('./html/site-intro.html')
     @@include('./html/top-product.html')
     @@include('./html/about-us.html')
+    @@include('./html/reviews.html')
   </main>
 
   <footer></footer>
