reviews section real done)

--- a/source/index.html
+++ b/source/index.html
@@ -19,6 +19,7 @@
     @@include('./html/top-product.html')
     @@include('./html/about-us.html')
     @@include('./html/reviews.html')
+    @@include('./html/contacts.html')
   </main>
 
   <footer></footer>
