--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,9 @@
     @@include('./html/contacts.html')
   </main>
 
-  <footer></footer>
+  <footer>
+    @@include('./html/footer.html')
+  </footer>
 
   <script src="./js/script.js"></script>
 </body>
