form mobile done

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -1,5 +1,5 @@
 <section class="catalog">
-  <h1 class="catalog__title title">Каталог товаров</h1>
+  <h1 class="catalog__title title-sub-page title">Каталог товаров</h1>
 
   <ul class="catalog__list reset-list container">
     <li class="catalog__item">
