--- a/source/html/contacts.html
+++ b/source/html/contacts.html
@@ -4,7 +4,7 @@
 		<div class="contacts__address-wrapper">
 			<address class="contacts__mail">
 				<span>e-mail:</span>
-				<span>info@mimimishkashop.ru</span>
+				<a href="#">info@mimimishkashop.ru</a>
 			</address>
 			<p class="contacts__address">
 				<span>адрес:</span>
