--- a/source/html/top-product.html
+++ b/source/html/top-product.html
@@ -31,7 +31,7 @@
 
         <source media="(min-width: 1250px)" srcset="../img/triple-set-desktop@1x.jpg, ../img/triple-set-desktop@2x.jpg 2x">
         <source media="(min-width: 768px)" srcset="../img/triple-set-tablet@1x.jpg, ../img/triple-set-tablet@2x.jpg 2x">
-        <img class="product__img" src="../img/triple-set-mobile@1x.jpg" srcset="../img/triple-set-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г">
+        <img class="top-product__img" src="../img/triple-set-mobile@1x.jpg" srcset="../img/triple-set-mobile@2x.jpg 2x" alt="Cat Energy Pro 500 г">
       </picture>
     </div>
 
