--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -5,13 +5,13 @@
     <li class="catalog__item">
       <a href="#" class="catalog__item-img-link">
         <picture>
-          <source type="image/webp" media="(min-width: 1250px)" srcset="../img/photo-hare-desktop@1x.webp, ../img/photo-hare-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-hare-tablet@1x.webp, ../img/photo-hare-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="../img/photo-hare-mobile@1x.webp, ../img/photo-hare-mobile@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 1250px)" srcset="./img/photo-hare-desktop@1x.webp, ./img/photo-hare-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-hare-tablet@1x.webp, ./img/photo-hare-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="./img/photo-hare-mobile@1x.webp, ./img/photo-hare-mobile@2x.webp 2x">
 
-          <source media="(min-width: 1250px)" srcset="../img/photo-hare-desktop@1x.jpg, ../img/photo-hare-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" srcset="../img/photo-hare-tablet@1x.jpg, ../img/photo-hare-tablet@2x.jpg 2x">
-          <img class="catalog__product-img" src="../img/photo-hare-mobile@1x.jpg" srcset="../img/photo-hare-mobile@2x.jpg 2x" alt="Фото товара Зайчик-попрыгайчик">
+          <source media="(min-width: 1250px)" srcset="./img/photo-hare-desktop@1x.jpg, ./img/photo-hare-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="./img/photo-hare-tablet@1x.jpg, ./img/photo-hare-tablet@2x.jpg 2x">
+          <img class="catalog__product-img" src="./img/photo-hare-mobile@1x.jpg" srcset="./img/photo-hare-mobile@2x.jpg 2x" alt="Фото товара Зайчик-попрыгайчик">
         </picture>
       </a>
 
@@ -33,13 +33,13 @@
     <li class="catalog__item">
       <a href="#" class="catalog__item-img-link">
         <picture>
-          <source type="image/webp" media="(min-width: 1250px)" srcset="../img/photo-bowl-desktop@1x.webp, ../img/photo-bowl-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-bowl-tablet@1x.webp, ../img/photo-bowl-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="../img/photo-bowl-mobile@1x.webp, ../img/photo-bowl-mobile@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 1250px)" srcset="./img/photo-bowl-desktop@1x.webp, ./img/photo-bowl-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-bowl-tablet@1x.webp, ./img/photo-bowl-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="./img/photo-bowl-mobile@1x.webp, ./img/photo-bowl-mobile@2x.webp 2x">
 
-          <source media="(min-width: 1250px)" srcset="../img/photo-bowl-desktop@1x.jpg, ../img/photo-bowl-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" srcset="../img/photo-bowl-tablet@1x.jpg, ../img/photo-bowl-tablet@2x.jpg 2x">
-          <img class="catalog__product-img" src="../img/photo-bowl-mobile@1x.jpg" srcset="../img/photo-bowl-mobile@2x.jpg 2x" alt="Фото товара Корзинка для белья">
+          <source media="(min-width: 1250px)" srcset="./img/photo-bowl-desktop@1x.jpg, ./img/photo-bowl-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="./img/photo-bowl-tablet@1x.jpg, ./img/photo-bowl-tablet@2x.jpg 2x">
+          <img class="catalog__product-img" src="./img/photo-bowl-mobile@1x.jpg" srcset="./img/photo-bowl-mobile@2x.jpg 2x" alt="Фото товара Корзинка для белья">
         </picture>
       </a>
 
@@ -61,13 +61,13 @@
     <li class="catalog__item">
       <a href="#" class="catalog__item-img-link">
         <picture>
-          <source type="image/webp" media="(min-width: 1250px)" srcset="../img/photo-toys-desktop@1x.webp, ../img/photo-toys-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-toys-tablet@1x.webp, ../img/photo-toys-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="../img/photo-toys-mobile@1x.webp, ../img/photo-toys-mobile@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 1250px)" srcset="./img/photo-toys-desktop@1x.webp, ./img/photo-toys-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="./img/photo-toys-tablet@1x.webp, ./img/photo-toys-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="./img/photo-toys-mobile@1x.webp, ./img/photo-toys-mobile@2x.webp 2x">
 
-          <source media="(min-width: 1250px)" srcset="../img/photo-toys-desktop@1x.jpg, ../img/photo-toys-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" srcset="../img/photo-toys-tablet@1x.jpg, ../img/photo-toys-tablet@2x.jpg 2x">
-          <img class="catalog__product-img" src="../img/photo-toys-mobile@1x.jpg" srcset="../img/photo-toys-mobile@2x.jpg 2x" alt="Фото товара Большая корзинка для игрушек">
+          <source media="(min-width: 1250px)" srcset="./img/photo-toys-desktop@1x.jpg, ./img/photo-toys-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="./img/photo-toys-tablet@1x.jpg, ./img/photo-toys-tablet@2x.jpg 2x">
+          <img class="catalog__product-img" src="./img/photo-toys-mobile@1x.jpg" srcset="./img/photo-toys-mobile@2x.jpg 2x" alt="Фото товара Большая корзинка для игрушек">
         </picture>
       </a>
 
