--- a/source/html/main-nav.html
+++ b/source/html/main-nav.html
@@ -2,11 +2,11 @@
   <div class="main-nav__wrapper container">
     <div class="main-nav__logo">
       <div class="main-nav__logo-wrapper">
-        <a href="../index.html" class="main-nav__logo-link">
+        <a href="./index.html" class="main-nav__logo-link">
           <picture>
-            <source media="(min-width: 1250px)" srcset="../img/logo-desktop.svg">
-            <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
-            <img class="main-nav__logo-img" src="../img/logo-mobile.svg" alt="Логотип ‎Mishka">
+            <source media="(min-width: 1250px)" srcset="./img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="./img/logo-tablet.svg">
+            <img class="main-nav__logo-img" src="./img/logo-mobile.svg" alt="Логотип ‎Mishka">
           </picture>
         </a>
         <button class="main-nav__button button-default" type="button">
@@ -16,12 +16,12 @@
     </div>
     <ul class="main-nav__list main-nav__list--closed reset-list">
       <li class="main-nav__list-item main-nav__list-item--catalog">
-        <a href="../catalog.html" class="main-nav__list-link">
+        <a href="./catalog.html" class="main-nav__list-link">
           <span>Каталог товаров</span>
         </a>
       </li>
       <li class="main-nav__list-item main-nav__list-item--order">
-        <a href="../form.html" class="main-nav__list-link">
+        <a href="./form.html" class="main-nav__list-link">
           <span>Вязание на заказ</span>
         </a>
       </li>
