--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
     <h3 class="visually-hidden">Карта</h3>
     <div class="map">
   <picture>
-    <source type="image/webp" media="(min-width: 1300px)" srcset="../img/map-desktop@1x.webp, ../img/map-desktop@2x.webp 2x">
-    <source type="image/webp" media="(min-width: 768px)" srcset="../img/map-tablet@1x.webp, ../img/map-tablet@2x.webp 2x">
-    <source type="image/webp" srcset="../img/map-mobile@1x.webp, ../img/map-mobile@2x.webp 2x">
+    <source type="image/webp" media="(min-width: 1300px)" srcset="./img/map-desktop@1x.webp, ./img/map-desktop@2x.webp 2x">
+    <source type="image/webp" media="(min-width: 768px)" srcset="./img/map-tablet@1x.webp, ./img/map-tablet@2x.webp 2x">
+    <source type="image/webp" srcset="./img/map-mobile@1x.webp, ./img/map-mobile@2x.webp 2x">
 
-    <source media="(min-width: 1300px)" srcset="../img/map-desktop@1x.png, ../img/map-desktop@2x.png 2x">
-    <source media="(min-width: 768px)" srcset="../img/map-tablet@1x.png, ../img/map-tablet@2x.png 2x">
-    <img class="map__img" src="../img/map-mobile@1x.png" srcset="../img/map-mobile@2x.png 2x" alt="Схема проезда ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+    <source media="(min-width: 1300px)" srcset="./img/map-desktop@1x.png, ./img/map-desktop@2x.png 2x">
+    <source media="(min-width: 768px)" srcset="./img/map-tablet@1x.png, ./img/map-tablet@2x.png 2x">
+    <img class="map__img" src="./img/map-mobile@1x.png" srcset="./img/map-mobile@2x.png 2x" alt="Схема проезда ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
   </picture>
-  <img class="map__pin" src="../img/icon-map-pin.svg" alt="Пин карты" width="67px" height="100px">
+  <img class="map__pin" src="./img/icon-map-pin.svg" alt="Пин карты" width="67px" height="100px">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.320858715877478!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!3m2!1sru!2sua!4v1593211093774!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 
